--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -321,9 +321,9 @@
             <tbody>
                 <tr *ngFor="let user of users">
                 <th scope="row">{{user.id}}</th>
+                <td>{{user.name}}</td>
                 <td>{{user.email}}</td>
                 <td>{{user.body}}</td>
-                <td>{{user.mobile}}</td>
               </tr> 
             </tbody>
            
