--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -309,7 +309,7 @@
                 <th>ID</th>
                 <th>Name</th>
                 <th>Email</th>
-             
+                <th>Body</th>
                 <!-- <th>Action</th> -->
                 <!-- <th>Email</th>
                 <th>Street</th>
