--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -307,8 +307,8 @@
             <thead>
               <tr>
                 <th>ID</th>
-                <th>Name</th>
-                <th>Email</th>
+                <!-- <th>Name</th> -->
+                <th>Title</th>
                 <th>Body</th>
                 <!-- <th>Action</th> -->
                 <!-- <th>Email</th>
@@ -321,8 +321,8 @@
             <tbody>
                 <tr *ngFor="let user of users">
                 <th scope="row">{{user.id}}</th>
-                <td>{{user.name}}</td>
-                <td>{{user.email}}</td>
+                <td>{{user.title}}</td>
+                <!-- <td>{{user.email}}</td> -->
                 <td>{{user.body}}</td>
               </tr> 
             </tbody>
